--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,7 @@
             </div>
         </footer>
         <!-- modal-->
-        <form class="modal js-modal" data-modal="callback" method="POST" action="mail.php">
+        <form class="modal js-modal" data-modal="callback" method="POST" action="send.php">
             <div class="modal__close js-close-modal"></div>
             <div class="modal__inner">
                 <div class="modal__header">
@@ -1049,7 +1049,7 @@
         </form>
         <!-- end modal-->
         <!-- modal-->
-        <form class="modal js-modal" data-modal="order" method="POST" action="mail.php">
+        <form class="modal js-modal" data-modal="order" method="POST" action="send.php">
             <div class="modal__close js-close-modal"></div>
             <div class="modal__inner">
                 <div class="modal__header">
@@ -1080,7 +1080,7 @@
         </form>
         <!-- end modal-->
         <!-- modal-->
-        <form class="modal js-modal" data-modal="bus" method="POST" action="mail.php">
+        <form class="modal js-modal" data-modal="bus" method="POST" action="send.php">
             <div class="modal__close js-close-modal"></div>
             <div class="modal__inner">
                 <div class="modal__header">
